fix: Corrected gapping in navbar

--- a/frontend/src/app/public/components/navbar-content/navbar-content.component.css
+++ b/frontend/src/app/public/components/navbar-content/navbar-content.component.css
@@ -18,6 +18,7 @@ span{
   display:flex;
   justify-content: space-between;
   padding: 1rem 10rem;
+  gap: 1rem;
   border: 1px solid #e0e0e0;
 }
 .toolbar-sections{
